Fixed issue where blocks were overlapping each other

--- a/src/styles/invite-page.module.css
+++ b/src/styles/invite-page.module.css
@@ -35,7 +35,7 @@
 
 .info {
   align-self: center;
-  width: 65%;
+  width: 100%;
   padding-bottom: 30px;
   margin-right: 30px;
 }
@@ -99,14 +99,12 @@
 .details {
   display: flex;
   flex-flow: column;
-  width: 50em;
+  height: 50%;
+  width: 100%;
 }
 
 .description {
   padding: 30px;
-  min-height: 150px;
-  min-width: 430px;
-  max-width: 720px;
   background-color: white;
   opacity: .80;
   border-radius: 5px;
@@ -124,6 +122,7 @@
   background-color: white;
   opacity: .80;
   border-radius: 5px;
+  width: 30%;
   height: 50%;
 }
 
